[gd_scene load_steps=2 format=3 uid="uid://riqfmggkqpfd"]

[ext_resource type="Script" path="res://Scripts/EndlessUI.gd" id="1_mm4xp"]

[node name="EndlessUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mm4xp")

[node name="TopInfo" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="LevelLabel" type="Label" parent="TopInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "等级: 1"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="TopInfo"]
custom_minimum_size = Vector2(400, 20)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16

[node name="MainInfo" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -47.0
offset_right = 220.0
offset_bottom = 47.0
grow_vertical = 2
theme_override_constants/separation = 10

[node name="MovesLabel" type="Label" parent="MainInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "剩余步数: %d"

[node name="ScoreLabel" type="Label" parent="MainInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "分数: %d"

[node name="FrenzyPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0

[node name="TimerLabel" type="Label" parent="FrenzyPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "狂热状态：30秒"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelUpPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="LevelUpPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "升级！
当前等级：1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "游戏结束！
步数用完了！"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "重新开始"

[node name="QuitButton" type="Button" parent="GameOverPanel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "返回主菜单"
